--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,5 +21,12 @@
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.29",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
+    "@types/react-redux": "^7.1.34",
+    "typescript": "^5.8.3"
   }
 }
